<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parentPanel"
    android:layout_width="880dp"
    android:layout_height="360dp"
    android:layout_marginLeft="8dip"
    android:layout_marginRight="8dip"
    android:background="@color/gray_color"
    android:orientation="vertical">

    <LinearLayout android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_bottom_new">
        <com.android.internal.widget.DialogTitle 
            android:id="@+id/alertTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="15dip"
            android:singleLine="true"
            android:ellipsize="end"
            android:textSize="32sp"
            android:textColor="#ffffff" />
    </LinearLayout>

    <LinearLayout 
        android:id="@+id/contentPanel"
        android:layout_width="880dp"
        android:layout_height="260dp"       
        android:orientation="vertical"
        android:background="@drawable/bg_bottom_new">

        <TextView android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dip"
            android:paddingRight="16dip"
            android:paddingTop="15dip"
            android:paddingBottom="10dip"          
            android:textSize="@dimen/text_size_normal"
            android:textColor="@color/white_color"
            android:text="@string/wps_dialog_message"/>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:orientation="horizontal">
            
            <EditText 
	            android:id="@+id/edtPassword"
	            android:layout_width="560dp"
	            android:layout_height="40dp"
	            android:layout_marginTop="10dp"	             
	            android:layout_marginLeft="65dp"	            	           
	            android:inputType="textPassword"
	            android:gravity="center"
	            android:textSize="24sp"
	            android:textColor="#ffffff"
	            android:background="#000000"/>
            <CheckBox                              
	            android:id="@+id/password_show"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical"
	            android:layout_marginLeft="15dp"
	            android:text="@string/show_password_text"
	            android:textColor="@color/white_color"	               
	            />
        </LinearLayout>
       
        <TextView
            android:id="@+id/pwd_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="20sp"
            android:text="@string/pwdHint"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="16dip"
            android:layout_marginRight="100dip"/>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"            
            android:layout_margin="20dp"           
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button 
                android:id="@+id/btnClear"
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:layout_marginLeft="180dp"
                android:textColor="@color/white_color"
                android:textSize="24sp"
                android:text="@string/clear"
                android:background="@drawable/button_new"/>

            <Button 
                android:id="@+id/btnDone"
                android:text="@string/connect"
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:layout_marginLeft="65dp"
                android:textColor="@color/white_color"
                android:textSize="24sp"
                android:background="@drawable/button_new"/>

            <Button 
                android:id="@+id/btnCancel"
                android:text="@string/cancel"
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:layout_marginLeft="65dp"              
                android:textColor="@color/white_color"
                android:textSize="24sp"
                android:background="@drawable/button_new"/>
	    <Button 
		android:id="@+id/forget_net"
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:layout_marginLeft="16dp"
                android:textColor="@color/white_color"
                android:visibility="gone"
                android:textSize="24sp"
                android:text="@string/forget_net_text"
                android:background="@drawable/button_new"/>
        </LinearLayout>
    </LinearLayout>
    
</LinearLayout>
