<RelativeLayout   xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@drawable/bg_background">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="45dp"
        android:paddingRight="45dp"
        android:paddingTop="32dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/welcome"          
            android:textColor="@color/blue_color"
            android:layout_marginTop="15dp"
            android:textSize="50sp"/>

        <LinearLayout
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:layout_gravity="center">

            <ImageView               
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_gravity="center_vertical"               	 
               	android:layout_marginLeft="69dp"
                android:background="@drawable/zero_blue"
                android:padding="10dp" />
            
            <ImageView                 
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:background="@drawable/zero_white"
                android:padding="10dp" />
            
            <ImageView                
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:background="@drawable/zero_white"
                android:padding="10dp" />

            <ImageView               
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:background="@drawable/zero_white"
                android:padding="10dp" />
                      
        </LinearLayout>

        <ImageView
            android:layout_width="1160dp"
            android:layout_height="40dp"
            android:layout_marginTop="7dp"
            android:layout_weight="0.39"
            android:src="@drawable/line_horizontal" />
	    <LinearLayout 
	    	android:layout_width="550dp"
	        android:layout_height="300dp"
	        android:orientation="vertical"
	        android:layout_gravity="center"
	        android:layout_marginTop="115dp">
             
	    	<TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10dp"		                         
	            android:text="@string/thanks"
	            android:textColor="@color/white_color"
	            android:textSize="25sp" />
	
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/setup_note"	             	             
	            android:textColor="@color/white_color"
	            android:layout_marginTop="8dp"
	            android:textSize="25sp" />
	
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/txt_continue"	            	             
	            android:textColor="@color/white_color"
	            android:layout_marginTop="8dp"
	            android:textSize="25sp" />
		</LinearLayout>
        
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_wel_next"
            android:layout_width="115dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="250dp"
            android:background="@drawable/button_new"
            android:text="@string/next"
            android:textColor="@color/white_color"
            android:textSize="25dp" />
    </RelativeLayout>

</RelativeLayout>
